--- a/imgui.ini
+++ b/imgui.ini
@@ -29,12 +29,12 @@ Size=201,114
 Collapsed=0
 
 [Window][Sprite]
-Pos=80,430
+Pos=37,495
 Size=350,197
 Collapsed=0
 
 [Window][Sphere]
-Pos=965,49
+Pos=969,52
 Size=313,244
 Collapsed=0
 
@@ -69,8 +69,8 @@ Size=187,95
 Collapsed=0
 
 [Window][DebugCamera]
-Pos=139,30
-Size=249,77
+Pos=47,-7
+Size=249,73
 Collapsed=0
 
 [Window][Particle]
@@ -84,7 +84,12 @@ Size=104,76
 Collapsed=0
 
 [Window][DirectionalLight]
-Pos=51,63
+Pos=45,87
 Size=187,147
+Collapsed=0
+
+[Window][PointLight]
+Pos=245,84
+Size=215,145
 Collapsed=0
 
