--- a/imgui.ini
+++ b/imgui.ini
@@ -71,10 +71,15 @@ Collapsed=0
 [Window][Groval Variables]
 Pos=23,39
 Size=337,139
-Collapsed=0
+Collapsed=1
 
 [Window][RotateMatrix]
 Pos=60,60
 Size=215,312
+Collapsed=0
+
+[Window][Quaternion]
+Pos=26,70
+Size=379,176
 Collapsed=0
 
