--- a/MyEngine1.vcxproj.filters
+++ b/MyEngine1.vcxproj.filters
@@ -177,7 +177,7 @@
     <ClCompile Include="LockOn.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="QuaternionFunction.cpp">
+    <ClCompile Include="Math\QuaternionFunction.cpp">
       <Filter>Math</Filter>
     </ClCompile>
   </ItemGroup>
@@ -347,10 +347,10 @@
     <ClInclude Include="LockOn.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Quaternion.h">
+    <ClInclude Include="Math\Quaternion.h">
       <Filter>Math</Filter>
     </ClInclude>
-    <ClInclude Include="QuaternionFunction.h">
+    <ClInclude Include="Math\QuaternionFunction.h">
       <Filter>Math</Filter>
     </ClInclude>
   </ItemGroup>
